[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Fonts/X8bitmapfont_0.png" type="Texture" id=1]
[ext_resource path="res://src/Fonts/X8bitmapfont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://System/IGT/HUD/IGT_Display.gd" type="Script" id=3]

[sub_resource type="BitmapFont" id=4]
resource_name = "MEGAMANX8newfont"
textures = [ ExtResource( 1 ) ]
chars = PoolIntArray( 224, 0, 105, 39, 6, 13, 0, 0, 7, 96, 0, 62, 52, 3, 13, 0, 0, 4, 64, 0, 42, 0, 7, 13, 0, 0, 8, 32, 0, 66, 52, 3, 13, -1, 0, 5, 160, 0, 54, 52, 3, 13, -1, 0, 5, 192, 0, 182, 26, 6, 13, 0, 0, 7, 225, 0, 112, 39, 6, 13, 0, 0, 7, 65, 0, 112, 13, 6, 13, 0, 0, 7, 33, 0, 70, 52, 2, 13, 1, 0, 4, 97, 0, 126, 26, 6, 13, 0, 0, 7, 161, 0, 154, 26, 6, 13, 1, 0, 8, 193, 0, 189, 26, 6, 13, 0, 0, 7, 226, 0, 119, 39, 6, 13, 0, 0, 7, 66, 0, 119, 13, 6, 13, 0, 0, 7, 34, 0, 252, 13, 3, 13, 0, 0, 4, 98, 0, 28, 26, 6, 13, 0, 0, 7, 162, 0, 205, 39, 5, 13, 0, 0, 6, 194, 0, 196, 26, 6, 13, 0, 0, 7, 227, 0, 126, 39, 6, 13, 0, 0, 7, 67, 0, 126, 13, 6, 13, 0, 0, 7, 35, 0, 248, 0, 6, 13, 0, 0, 7, 99, 0, 35, 26, 6, 13, 0, 0, 7, 163, 0, 161, 26, 6, 13, 0, 0, 7, 195, 0, 203, 26, 6, 13, 0, 0, 7, 228, 0, 133, 39, 6, 13, 0, 0, 7, 68, 0, 133, 13, 6, 13, 0, 0, 7, 36, 0, 0, 13, 6, 13, 0, 0, 7, 100, 0, 42, 26, 6, 13, 0, 0, 7, 196, 0, 210, 26, 6, 13, 0, 0, 7, 229, 0, 140, 39, 6, 13, 0, 0, 7, 69, 0, 140, 13, 6, 13, 0, 0, 7, 37, 0, 50, 0, 7, 13, 0, 0, 8, 101, 0, 49, 26, 6, 13, 0, 0, 7, 197, 0, 217, 26, 6, 13, 0, 0, 7, 230, 0, 0, 0, 8, 13, 0, 0, 9, 70, 0, 147, 13, 6, 13, 0, 0, 7, 38, 0, 7, 13, 6, 13, 0, 0, 7, 102, 0, 223, 39, 5, 13, 0, 0, 6, 166, 0, 105, 52, 1, 13, 0, 0, 2, 198, 0, 82, 0, 7, 13, 0, 0, 8, 231, 0, 147, 39, 6, 13, 0, 0, 7, 71, 0, 154, 13, 6, 13, 0, 0, 7, 39, 0, 73, 52, 2, 13, 0, 0, 3, 103, 0, 56, 26, 6, 13, 0, 0, 7, 199, 0, 224, 26, 6, 13, 0, 0, 7, 232, 0, 154, 39, 6, 13, 0, 0, 7, 72, 0, 161, 13, 6, 13, 0, 0, 7, 40, 0, 252, 26, 3, 13, 0, 0, 4, 104, 0, 63, 26, 6, 13, 0, 0, 7, 168, 0, 217, 39, 5, 13, 0, 0, 6, 200, 0, 231, 26, 6, 13, 0, 0, 7, 233, 0, 161, 39, 6, 13, 0, 0, 7, 73, 0, 15, 52, 4, 13, 0, 0, 5, 41, 0, 50, 52, 3, 13, 0, 0, 4, 105, 0, 88, 52, 2, 13, 0, 0, 3, 169, 0, 26, 0, 7, 13, 0, 0, 8, 201, 0, 238, 26, 6, 13, 0, 0, 7, 234, 0, 168, 39, 6, 13, 0, 0, 7, 74, 0, 70, 13, 6, 13, 0, 0, 7, 42, 0, 90, 0, 7, 13, 0, 0, 8, 106, 0, 70, 26, 6, 13, 0, 0, 7, 202, 0, 245, 26, 6, 13, 0, 0, 7, 235, 0, 234, 0, 6, 13, 0, 0, 7, 75, 0, 175, 13, 6, 13, 0, 0, 7, 43, 0, 98, 0, 7, 13, 0, 0, 8, 107, 0, 77, 26, 6, 13, 0, 0, 7, 171, 0, 114, 0, 7, 13, 0, 0, 8, 203, 0, 0, 39, 6, 13, 0, 0, 7, 236, 0, 76, 52, 2, 13, 0, 0, 3, 76, 0, 182, 13, 6, 13, 0, 0, 7, 44, 0, 97, 52, 2, 13, 0, 0, 3, 108, 0, 85, 52, 2, 13, 0, 0, 3, 204, 0, 20, 52, 4, 13, 0, 0, 5, 237, 0, 79, 52, 2, 13, 0, 0, 3, 77, 0, 226, 0, 7, 13, 0, 0, 8, 45, 0, 42, 13, 6, 13, 0, 0, 7, 109, 0, 9, 0, 8, 13, 0, 0, 9, 205, 0, 25, 52, 4, 13, 0, 0, 5, 238, 0, 35, 52, 4, 13, 0, 0, 5, 78, 0, 189, 13, 6, 13, 0, 0, 7, 46, 0, 82, 52, 2, 13, 0, 0, 3, 110, 0, 84, 26, 6, 13, 0, 0, 7, 174, 0, 218, 0, 7, 13, 0, 0, 8, 206, 0, 240, 39, 4, 13, 0, 0, 5, 239, 0, 245, 39, 4, 13, 0, 0, 5, 79, 0, 196, 13, 6, 13, 0, 0, 7, 47, 0, 56, 13, 6, 13, 0, 0, 7, 111, 0, 91, 26, 6, 13, 0, 0, 7, 207, 0, 250, 39, 4, 13, 0, 0, 5, 240, 0, 241, 0, 6, 13, 0, 0, 7, 80, 0, 203, 13, 6, 13, 0, 0, 7, 48, 0, 130, 0, 7, 13, 0, 0, 8, 112, 0, 98, 26, 6, 13, 0, 0, 7, 176, 0, 58, 52, 3, 13, 0, 0, 4, 208, 0, 66, 0, 7, 13, 0, 0, 8, 241, 0, 14, 13, 6, 13, 0, 0, 7, 81, 0, 210, 13, 6, 13, 0, 0, 7, 49, 0, 0, 52, 4, 13, 1, 0, 6, 113, 0, 105, 26, 6, 13, 0, 0, 7, 177, 0, 181, 39, 5, 13, 0, 0, 6, 209, 0, 7, 39, 6, 13, 0, 0, 7, 242, 0, 21, 13, 6, 13, 0, 0, 7, 82, 0, 217, 13, 6, 13, 0, 0, 7, 50, 0, 146, 0, 7, 13, 0, 0, 8, 114, 0, 193, 39, 5, 13, 0, 0, 6, 210, 0, 14, 39, 6, 13, 0, 0, 7, 243, 0, 28, 13, 6, 13, 0, 0, 7, 83, 0, 224, 13, 6, 13, 0, 0, 7, 51, 0, 154, 0, 7, 13, 0, 0, 8, 115, 0, 112, 26, 6, 13, 0, 0, 7, 211, 0, 21, 39, 6, 13, 0, 0, 7, 244, 0, 35, 13, 6, 13, 0, 0, 7, 212, 0, 28, 39, 6, 13, 0, 0, 7, 84, 0, 231, 13, 6, 13, 0, 0, 7, 52, 0, 162, 0, 7, 13, 0, 0, 8, 116, 0, 199, 39, 5, 13, 0, 0, 6, 245, 0, 49, 13, 6, 13, 0, 0, 7, 213, 0, 35, 39, 6, 13, 0, 0, 7, 85, 0, 238, 13, 6, 13, 0, 0, 7, 53, 0, 18, 0, 7, 13, 0, 0, 8, 117, 0, 119, 26, 6, 13, 0, 0, 7, 246, 0, 63, 13, 6, 13, 0, 0, 7, 214, 0, 42, 39, 6, 13, 0, 0, 7, 86, 0, 245, 13, 6, 13, 0, 0, 7, 54, 0, 178, 0, 7, 13, 0, 0, 8, 118, 0, 168, 26, 6, 13, 0, 0, 7, 87, 0, 122, 0, 7, 13, 0, 0, 8, 215, 0, 49, 39, 6, 13, 0, 0, 7, 247, 0, 211, 39, 5, 13, 0, 0, 6, 183, 0, 100, 52, 2, 13, 0, 0, 3, 119, 0, 210, 0, 7, 13, 0, 0, 8, 55, 0, 186, 0, 7, 13, 0, 0, 8, 248, 0, 77, 13, 6, 13, 0, 0, 7, 216, 0, 56, 39, 6, 13, 0, 0, 7, 88, 0, 0, 26, 6, 13, 0, 0, 7, 56, 0, 194, 0, 7, 13, 0, 0, 8, 120, 0, 133, 26, 6, 13, 0, 0, 7, 249, 0, 84, 13, 6, 13, 0, 0, 7, 217, 0, 63, 39, 6, 13, 0, 0, 7, 89, 0, 7, 26, 6, 13, 0, 0, 7, 57, 0, 202, 0, 7, 13, 0, 0, 8, 121, 0, 140, 26, 6, 13, 0, 0, 7, 250, 0, 91, 13, 6, 13, 0, 0, 7, 218, 0, 70, 39, 6, 13, 0, 0, 7, 90, 0, 14, 26, 6, 13, 0, 0, 7, 58, 0, 91, 52, 2, 13, 0, 0, 3, 122, 0, 147, 26, 6, 13, 0, 0, 7, 251, 0, 98, 13, 6, 13, 0, 0, 7, 219, 0, 77, 39, 6, 13, 0, 0, 7, 91, 0, 5, 52, 4, 13, 0, 0, 5, 59, 0, 94, 52, 2, 13, 0, 0, 3, 123, 0, 40, 52, 4, 13, 0, 0, 5, 187, 0, 106, 0, 7, 13, 0, 0, 8, 252, 0, 105, 13, 6, 13, 0, 0, 7, 220, 0, 84, 39, 6, 13, 0, 0, 7, 92, 0, 21, 26, 6, 13, 0, 0, 7, 60, 0, 235, 39, 4, 13, 0, 0, 5, 124, 0, 103, 52, 1, 13, 0, 0, 2, 253, 0, 170, 0, 7, 13, 0, 0, 8, 221, 0, 91, 39, 6, 13, 0, 0, 7, 93, 0, 45, 52, 4, 13, 0, 0, 5, 61, 0, 187, 39, 5, 13, 0, 0, 6, 125, 0, 30, 52, 4, 13, 0, 0, 5, 254, 0, 229, 39, 5, 13, 1, 0, 7, 222, 0, 98, 39, 6, 13, 0, 0, 7, 94, 0, 175, 39, 5, 13, 0, 0, 6, 62, 0, 10, 52, 4, 13, 0, 0, 5, 126, 0, 138, 0, 7, 13, 0, 0, 8, 255, 0, 168, 13, 6, 13, 0, 0, 7, 223, 0, 58, 0, 7, 13, 0, 0, 8, 95, 0, 74, 0, 7, 13, 0, 0, 8, 63, 0, 34, 0, 7, 13, 0, 0, 8, 191, 0, 175, 26, 6, 13, 0, 0, 7 )
height = 11.0
ascent = 11.0

[node name="IGTHUD" type="ColorRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -18.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 3 )

[node name="RTAContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 4.0
margin_top = -2.0
margin_right = 76.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( -417, 68 )
rect_clip_content = true
custom_constants/separation = 0
alignment = 2

[node name="TotalTime" type="Label" parent="RTAContainer"]
margin_right = 69.0
margin_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "HH:MM:SS.ms"
align = 2

[node name="TimeContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = -2.0
margin_right = 76.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( -417, 68 )
rect_clip_content = true
custom_constants/separation = 0
alignment = 2

[node name="TotalTime" type="Label" parent="TimeContainer"]
margin_right = 69.0
margin_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "HH:MM:SS.ms"
align = 2

[node name="marginContainer" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = -7.0
margin_right = 89.0
margin_bottom = 22.0
rect_scale = Vector2( 0.8, 0.8 )
alignment = 2

[node name="label" type="Label" parent="marginContainer"]
margin_right = 77.0
margin_bottom = 14.0

[node name="StageTime" type="Label" parent="marginContainer"]
margin_top = 18.0
margin_right = 69.0
margin_bottom = 29.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "HH:MM:SS.ms"
align = 2
valign = 2
